@@ -3,16 +3,10 @@
 use strict;
 use warnings;
 
+use Test::DescribeMe qw(author);
 use Test::Most;
+use Test::Needs 'Test::Strict';
 
-if($ENV{AUTHOR_TESTING}) {
-	eval 'use Test::Strict';
-	if($@) {
-		plan(skip_all => 'Test::Strict required for testing use strict');
-	} else {
-		all_perl_files_ok();
-		warnings_ok('lib/Locale/CA.pm');
-	}
-} else {
-	plan(skip_all => 'Author tests not required for installation');
-}
+Test::Strict->import();
+all_perl_files_ok();
+warnings_ok('lib/Locale/CA.pm');
